--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-file-icon": "^1.5.0",
     "react-hook-form": "^7.51.5",
+    "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^5.2.1",
     "react-lottie-player": "^2.0.0",
     "react-resizable-panels": "^2.0.19",
