--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vscode-icons-js": "^11.6.1",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
