--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tauri-apps/api": "^1.5.6",
+    "@xterm/xterm": "^5.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dexie": "^4.0.7",
@@ -44,6 +45,7 @@
     "vscode-icons-js": "^11.6.1",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
+    "xterm-for-react": "^1.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
