--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vscode-icons-js": "^11.6.1",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
@@ -53,6 +54,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-file-icon": "^1.0.4",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
