--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,12 +17,26 @@ tauri-build = { version = "1.5.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.5", features = [ "os-all", "shell-all", "dialog-all", "path-all", "fs-all"] }
+tauri = { version = "1.6.5", features = [ "shell-open", "os-all", "dialog-all", "path-all", "fs-all"] }
 portable-pty = "0.8.1"
-tokio = { version = "1", features = ["time"] }
+
+notify = "5.1.0"
+tokio = { version = "1.26.0", features = ["time"] }
+
+uuid = "1.3.0"
+shells = "0.2.0"
+
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
+
+
+[profile.release]
+panic = "abort"   # Strip expensive panic clean-up logic
+codegen-units = 1 # Compile crates one after another so the compiler can optimize better
+lto = true        # Enables link to optimizations
+opt-level = "s"   # Optimize for binary size
+strip = true      # Remove debug symbols
