--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,9 @@ tokio = { version = "1.26.0", features = ["time"] }
 uuid = "1.3.0"
 shells = "0.2.0"
 
+zip = "2.1.5"
+walkdir = "2.3.2"
+
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
