--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.5", features = [ "shell-open", "os-all", "dialog-all", "path-all", "fs-all"] }
+tauri = { version = "1.6.5", features = [ "shell-all", "os-all", "dialog-all", "path-all", "fs-all"] }
 portable-pty = "0.8.1"
 
 notify = "5.1.0"
